<resources>
    <string name="app_name">Spinder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_name_1">Add Data</string>
    <string name="title_game">Game</string>
    <string name="title_location">Location</string>
    <string name="title_time">Time</string>
    <string name="button_submit">Submit</string>
    <string name="button_add_game">Add Game</string>
    <string name="access_token">Bearer 4a0e8ef2cf1f27731a5778e54ad84fcae8cd5139</string>
    <string name="button_upload">Upload</string>
</resources>
